# basestation

./: .gitignore  .gitmodules  Dockerfile  README.md  build.bash  entrypoint.bash  join.bash  run-debug.bash  run-it.bash  run.bash
.github/workflows/: update-submodules.yml
GeoViz/: Dockerfile
GeoViz/geoviz/config/: map.yaml
GeoViz/geoviz/src/geoviz/: map_app.py
GeoViz/geoviz/static/js/: map.js
GeoViz/geoviz/templates/: index.html
Scoring_Server_Submission/: Dockerfile  README.md  build.bash  run.bash
Scoring_Server_Submission/scorecard_submitter/scripts/: helpers.py  submission.py  submission_node.py
basestation-launch/: CMakeLists.txt  package.xml
basestation-launch/config/: robots.yaml
basestation-launch/launch/: basestation.launch
basestation-msgs/: CMakeLists.txt  package.xml
basestation-msgs/msg/: FullReport.msg  InitialReport.msg  ServerReport.msg
data/: casualty_list_incomplete.json  threshold_config.json
data/casualty_db/: matching_table.json  uav_casualty_list.json  ugv_casualty_list.json
geoviz/: CMakeLists.txt  README.md  package.xml  setup.py
geoviz/config/: map.yaml
geoviz/env/: mapbox_token.env
geoviz/launch/: spoof.launch  viz.launch
geoviz/scripts/: download_tiles.py  ros_node.py  spoof_gps_node.py  spoof_node.py  spoof_status_node.py
geoviz/src/geoviz/: map_app.py  map_node.py
geoviz/static/js/: map.js
geoviz/templates/: index.html
scoring-server-submission/scorecard_submitter/: CMakeLists.txt  package.xml
scoring-server-submission/scorecard_submitter/launch/: scorecard.launch
scoring-server-submission/scorecard_submitter/scripts/: dummy_node.py  helpers.py  spoofer.py  sub_test.py  submission.py  submission_node.py  test_server.py
scoring-server-submission/scorecard_submitter/scripts/data/: reports_09_18_2025.json
viewer/: Dockerfile  build.sh  entrypoint.sh  run-many.bash  run.bash  usage.md  viewer_gui.py
